# kitstory

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  knip.ts  package.json  pnpm-lock.yaml
apps/client/: package.json
apps/client/src/routes/: +layout.svelte  +page.svelte
apps/desktop/: package.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/lib/components/: Sidebar.svelte
apps/kitstory-lite/: README.md  package.json  svelte.config.ts  tsconfig.json  vite.config.ts
apps/kitstory-lite/src/: app.html
apps/kitstory-lite/src-tauri/: Cargo.toml  tauri.conf.json
apps/kitstory-lite/src-tauri/capabilities/: default.json  desktop.json
apps/kitstory-lite/src-tauri/src/: lib.rs  main.rs
apps/kitstory-lite/src/lib/components/: Sidebar.svelte  WindowContainer.svelte
apps/kitstory-lite/src/lib/components/dropdown/: Dropdown.svelte  DropdownButton.svelte  DropdownContents.svelte  DropdownItem.svelte  context.ts  index.ts
apps/kitstory-lite/src/lib/utils/: menuA11y.ts  trackDOMPosition.ts
apps/kitstory-lite/src/lib/views/: Projects.svelte  Storyboard.svelte
apps/kitstory-lite/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/web/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: app.css  app.d.ts  app.html  hooks.server.ts
apps/web/src/lib/components/: Breadcrumbs.svelte  Footer.svelte  Meta.svelte
apps/web/src/lib/components/navbar/: Navbar.svelte  NavbarBase.svelte  NavbarLoggedIn.svelte  index.ts
apps/web/src/lib/stores/: arrayWritable.ts  characters.ts  history.ts  plot.ts
apps/web/src/lib/types/: index.ts
apps/web/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
apps/web/src/routes/(app)/projects/: +page.svelte
apps/web/src/routes/(app)/screenwriting/: +page.svelte
apps/web/src/routes/(auth)/login/: +page.svelte
schema/: README.md  editor_blocks.mylo  ksdoc.mylo
