[workspace]
resolver = "3"
members = ["packages/shared-rs", "apps/kitstory-lite/src-tauri"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "devtools"] }

tauri-plugin-opener = "2"
tauri-plugin-websocket = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-autostart = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"                                    # shared
tauri-plugin-deep-link = "2"                                          # studio only
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }       # studio only
tauri-plugin-fs = "2"                                                 # shared
tauri-plugin-http = "2"                                               # shared
tauri-plugin-persisted-scope = "2"                                    # shared
tauri-plugin-updater = "2"                                            # shared
