[package]
name = "kitstory-lite"
version = "0.1.0"
description = "MHM"
authors = ["Fusky Labs", "Kerby Keith Aquino"]
edition = "2024"

[lib]
name = "kitstory_lite_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kitstory-shared-rs = { path = "../../../packages/shared-rs" }
kitstory-shared-tauri = { path = "../../../packages/shared-tauri" }
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-websocket = { workspace = true }                       # studio only

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = { workspace = true }            # shared
tauri-plugin-os = { workspace = true }                # shared
tauri-plugin-autostart = { workspace = true }         # shared
tauri-plugin-clipboard-manager = { workspace = true } # shared
tauri-plugin-positioner = { workspace = true }        # shared
tauri-plugin-notification = { workspace = true }      # shared
tauri-plugin-single-instance = { workspace = true }   # shared
tauri-plugin-fs = { workspace = true }                # shared
tauri-plugin-http = { workspace = true }              # shared
tauri-plugin-persisted-scope = { workspace = true }   # shared
tauri-plugin-updater = { workspace = true }           # shared
